--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,184 @@
-<!DOCTYPE html>
-<html>
-  <head>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/9.9.1/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/9.9.1/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+
+    <title>Preguntas para parejas</title>
+</head>
+
+<body>
+    <div class="container">
+        <h1 id="heading">Luz del Matrimonio</h1><br>
+
+        <div class="question-div">
+            <div class="row">
+                <div class="col-8">
+                    <h2 id="heading">Preguntas generales</h2>
+                </div>
+                <div class="col-4">
+                    <button id="select" class="button-15" role="button">Generar una pregunta</button>
+                </div>
+            </div>
+
+            <div class="row">
+            <div class="col d-flex align-items-center justify-content-center">
+                <p id="result" class="answer"></p>
+                <i></i>
+                <!-- <i class="fas fa-minus-square fs-3" id="minus"></i> -->
+            </div>
+        </div>
+        </div>
+        <div class="question-div">
+            <div class="row">
+                <div class="col-8">
+                    <h2 id="heading">Bonus</h2>
+                </div>
+                <div class="col-4">
+                    <button id="sexButton" class="button-15" role="button">Generar una pregunta</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col d-flex align-items-center justify-content-center"></div>
+                <p id="sexQ"  class="answer"></p>
+                <i></i>
+            </div>
+                <!-- <i class="fas fa-minus-square fs-3" id="minus"></i> -->
+            </div>
+
+        </div>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
 
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/be2acf9085.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+
+</body>
+
 </html>
+
+<script>
+    var text = [
+        "¿Cómo te gustaría ser recordado/a?",
+        "¿Cuál es tu película favorita?",
+        "¿Cuál ha sido la decisión más importante que has tomado en tu vida?",
+        "¿Qué es lo que te da más satisfacción en la vida?",
+        "¿Qué te ayuda a superar momentos díficiles?",
+        "Descríbete en 5 palabras",
+        "¿Qué fue lo primero que notaste de mí?",
+        "¿Cuál es tu cosa favorita acerca de ti mismo?",
+        "¿Qué das por asegurado en la vida?",
+        "Sostengan sus manos y mírense a los ojos durante toda una canción",
+        "¿Qué te hace sonreír?",
+        "¿Cuál es tu idea de la vida soñada?",
+        "¿Cuál es la lección más importante que has aprendido?",
+        "¿Te sientes cómodo pidiendo ayuda cuando lo necesitas?",
+        "¿Existen relaciones en tu vida que te gustaría mejorar o reparar?",
+        "¿Qué cambiarías en tu vida para sentirte más amado, aceptado y seguro?",
+        "¿Cuál es tu placer culposo?",
+        "Di 3 cosas positivas acerca de tu pareja",
+        "Di 3 cosas positivas acerca de ti mismo ",
+        "¿Qué o a quién necesitas soltar en tu vida?",
+        "¿Tienes algo viejo guardado que no puedes botar?",
+        "¿Qué es lo que más de avergüenza delante de otras personas?",
+        "¿Cómo liberas el estrés?",
+        "¿Qué te motiva a despertar cada mañana?",
+        "Rían juntos de algo (comienza por una risa fingida y luego continúa riendo)",
+        "¿Cuál es el juguete que más recuerdas de tu infancia?",
+        "Cuando estas triste o molesto, ¿Cómo te gusta ser confortado?",
+        "Haz una imitación de tu pareja",
+        "¿Cuál de mis amigos te cae mejor y/o peor? y ¿Por qué?",
+        "¿Qué cosa hago que te hace sonreír?",
+        "¿Qué cosa piensas que necesito escuchar?",
+        "¿Qué cosas positivas hay acerca de nuestra relación?",
+        "¿Hay algo que estás intentando alcanzar en lo que pueda ayudarte?",
+        "¿Hay algún sitio en el mundo donde te gustaría vivir o viajar?",
+        "¿Qué acerca de mí te hace sentir que estás en casa?",
+        "¿Qué deberíamos hacer juntos y por qué?",
+        "¿Qué te gustaría que hiciera más seguido?",
+        "¿Cuándo fue la última vez que te hice sentir querido/a?",
+        "¿Cuál es tu primer y segundo lenguaje del amor? Por ejemplo: palabras de afirmación, actos de servicio, tiempo de calidad, caricias",
+        "¿De qué cosas te gustaría que me hiciera responsable?",
+        "¿Cómo describirías nuestra comunicación?",
+        "¿Te sientes aceptado/a por mí?",
+        "¿Sientes que puedes hablar de cualquier cosa conmigo?",
+        "¿Qué te hizo enamorarte de mí?",
+        "¿Cuál ha sido el momento más feliz de nuestra relación? o ¿Cuál es tu recuerdo favorito de nuestra relación?",
+        "¿Te he ayudado a sanar alguna vez?",
+        "¿Qué te hace sentir triste o llorar?",
+        "¿Cuál de mis hábitos te molesta más?",
+        "¿Te sientes amado/a?¿Qué puedo hacer para que te sientas más amado/a?",
+        "¿Sientes que te escucho cuando me hablas?",
+        "¿Te sientes emocionalmente cerca de mí?",
+        "¿Qué cosa nunca cambiarías de mí?",
+        "¿Qué es lo que hago que más te gusta?",
+        "¿Te gusta más besar o abrazar?",
+        "¿Qué aspecto piensas que deberíamos trabajar de nuestra relación?",
+        "¿Qué te gusta más acerca de nosotros como pareja?",
+        "¿Cuál es tu recuerdo favorito con tu mamá o papá?",
+        "¿Quién te enseñó a montar bicicleta?",
+        "¿Cuál es la tradición familiar favorita con la que creciste?",
+        "¿Cuál es la tradición familiar favorita que hacemos juntos?",
+        "¿Cómo nos ves dentro de 5-10 años?",
+        "¿Cuál era tu materia favorita cuando estudiabas?",
+        "¿Cuál es tu animal favorito?",
+        "Si pudieras ser otra persona ¿Quién serías y por qué?",
+        "Si pudieras viajar en el tiempo ¿A qué edad regresarías?",
+        "Si pudieras ver el futuro, ¿Qué te gustaría saber?",
+        "¿Cuál es tu recuerdo más cercano?",
+        "¿Qué es lo que te ha pasado que te ha asustado más?",
+        "¿Cuál es tu mayor miedo?",
+        "¿Cuál es el mejor consejo que te han dado?",
+        "¿Cuál es persona que más respetas en la vida?",
+        "¿Te gusta más planificar o improvisar?",
+        "¿Qué tarea del hogar te gusta más hacer?",
+        "¿Qué tarea del hogar te gusta menos hacer?",
+        "Si pudieras conocer a alguien en el mundo, vivo o muerto ¿Quién sería?",
+        "¿Cuál piensas que es tu mayor debilidad?",
+        "¿Qué te hace sentir que tu día fue perfecto?",
+        "¿Cuál es tu postre favorito?",
+        "Si pudieras elegir otro nombre, ¿Cómo te gustaría llamarte?",
+        "¿Cuál es tu comida favorita?"
+    ];
+
+    var sexQuestions = [
+        "¿Qué te excita?",
+        "¿Qué es lo que más te gusta de nuestra vida sexual?",
+        "¿Qué aspectos del sexo te hacen sentir incómodo/a?",
+        "¿Crees que puedes quitarme mi ropa interior sin usar las manos?",
+        "¿Qué aspectos del sexo te hacen sentir incómodo/a?",
+        "¿Qué es lo que más te gusta de nuestra vida sexual?"
+    ];
+
+
+    document.getElementById("select").onclick = function () {
+        if(text.length===0){
+            alert("Se han acabado las preguntas, reinicia la página para comenzar de nuevo 😍");
+            return;
+        }
+        const index=Math.floor(Math.random() * text.length)
+        document.getElementById("result").innerHTML = text[index];
+        text.splice(index,1);
+    }
+
+    document.getElementById("sexButton").onclick = function () {
+        if(sexQuestions.length===0){
+            alert("Se han acabado las preguntas, reinicia la página para comenzar de nuevo 😍");
+            return;
+        }
+        const index=Math.floor(Math.random() * sexQuestions.length)
+        document.getElementById("sexQ").innerHTML = sexQuestions[index];
+        sexQuestions.splice(index,1);
+    }
+</script>
