--- a/public/index.html
+++ b/public/index.html
@@ -2,67 +2,67 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 
 
-    <title>Preguntas para parejas</title>
+  <title>Preguntas para parejas</title>
 </head>
 
 <body>
-    <div class="container">
-        <h1 id="heading">Luz del Matrimonio</h1><br>
+<div class="container">
+  <h1>Luz del Matrimonio</h1><br>
 
-        <div class="question-div">
-            <div class="row">
-                <div class="col-8">
-                    <h2 id="heading">Preguntas generales</h2>
-                </div>
-                <div class="col-4">
-                    <button id="select" class="button-15" role="button">Generar una pregunta</button>
-                </div>
-            </div>
-
-            <div class="row">
-            <div class="col d-flex align-items-center justify-content-center">
-                <p id="result" class="answer"></p>
-                <i></i>
-                <!-- <i class="fas fa-minus-square fs-3" id="minus"></i> -->
-            </div>
-        </div>
-        </div>
-        <div class="question-div">
-            <div class="row">
-                <div class="col-8">
-                    <h2 id="heading">Bonus</h2>
-                </div>
-                <div class="col-4">
-                    <button id="sexButton" class="button-15" role="button">Generar una pregunta</button>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col d-flex align-items-center justify-content-center"></div>
-                <p id="sexQ"  class="answer"></p>
-                <i></i>
-            </div>
-                <!-- <i class="fas fa-minus-square fs-3" id="minus"></i> -->
-            </div>
-
-        </div>
+  <div class="question-div">
+    <div class="row">
+      <div class="col-lg-8 col-sm-12">
+        <h2>Preguntas generales</h2>
+      </div>
+      <div class="col-lg-4 col-sm-12 d-flex align-items-center justify-content-center">
+        <button id="select" class="button-15" role="button">Generar una pregunta</button>
+      </div>
     </div>
 
+    <div class="row">
+      <div class="col d-flex align-items-center justify-content-center">
+        <p id="result" class="answer"></p>
+        <i></i>
+        <!-- <i class="fas fa-minus-square fs-3" id="minus"></i> -->
+      </div>
+    </div>
+  </div>
+  <div class="question-div">
+    <div class="row">
+      <div class="col-lg-8 col-sm-12">
+        <h2>Bonus</h2>
+      </div>
+      <div class="col-lg-4 col-sm-12 d-flex align-items-center justify-content-center">
+        <button id="sexButton" class="button-15" role="button">Generar una pregunta</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col d-flex align-items-center justify-content-center"></div>
+      <p id="sexQ" class="answer"></p>
+      <i></i>
+    </div>
+    <!-- <i class="fas fa-minus-square fs-3" id="minus"></i> -->
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+</div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/be2acf9085.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+<script src="https://kit.fontawesome.com/be2acf9085.js" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 
 </body>
 
@@ -163,22 +163,22 @@
 
 
     document.getElementById("select").onclick = function () {
-        if(text.length===0){
+        if (text.length === 0) {
             alert("Se han acabado las preguntas, reinicia la página para comenzar de nuevo 😍");
             return;
         }
-        const index=Math.floor(Math.random() * text.length)
+        const index = Math.floor(Math.random() * text.length)
         document.getElementById("result").innerHTML = text[index];
-        text.splice(index,1);
+        text.splice(index, 1);
     }
 
     document.getElementById("sexButton").onclick = function () {
-        if(sexQuestions.length===0){
+        if (sexQuestions.length === 0) {
             alert("Se han acabado las preguntas, reinicia la página para comenzar de nuevo 😍");
             return;
         }
-        const index=Math.floor(Math.random() * sexQuestions.length)
+        const index = Math.floor(Math.random() * sexQuestions.length)
         document.getElementById("sexQ").innerHTML = sexQuestions[index];
-        sexQuestions.splice(index,1);
+        sexQuestions.splice(index, 1);
     }
 </script>
